--- a/MainBody.tex
+++ b/MainBody.tex
@@ -17,11 +17,11 @@
     \ENGtitle{SCU \LaTeX format}
     \CoverTitle{四川大学本科毕业设计\LaTeX模板}    
     \author{路人乙}
-    \ENGauthor{Jinzhong Hong}
+    \ENGauthor{yi Luren}
     \accomplishdate{2025年5月}
     \school{电气工程学院}
     \supervisor{路人{\quad}甲}
-    \ENGsupervisor{Prof. Haiyan Tu}
+    \ENGsupervisor{Prof. Jia Luren}
     \major{自动化}
     \ENGmajor{Automated Systems Engineering}
     \schoolID{202111111}
